layout bug fixed, how fullrecord window cover the whole screen

--- a/frontend/src/components/records/fullRecord/fullRecordBase.module.css
+++ b/frontend/src/components/records/fullRecord/fullRecordBase.module.css
@@ -1,8 +1,9 @@
 .overflow{
     width: 100%;
     height: 100%;
+    top:0;
 
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
 
     opacity: 0;
